--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,33 @@
 <!doctype html>
 
 <!-- ASSIGN OUR ANGULAR MODULE -->
-<html ng-app="Todo">
+<html ng-app="scotchTodo">
 <head>
     <!-- META -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"><!-- Optimize mobile viewport -->
 
-    <title>MEAN Todo SPA</title>
+    <title>Node/Angular Todo App</title>
 
     <!-- SCROLLS -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"><!-- load bootstrap -->
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     <style>
         html                    { overflow-y:scroll; }
         body                    { padding-top:50px; }
         #todo-list              { margin-bottom:30px; }
+        #todo-form              { margin-bottom:50px; }
     </style>
 
     <!-- SPELLS -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script><!-- load jquery -->
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script><!-- load angular -->
-    <script src="core.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script><!-- load angular -->
+
+    <script src="javascripts/controllers/main.js"></script> <!-- load up our controller -->
+    <script src="javascripts/services/todos.js"></script> <!-- load our todo service -->
+    <script src="javascripts/core.js"></script> <!-- load our main application -->
 
 </head>
-<!-- SET THE CONTROLLER AND GET ALL TODOS -->
+<!-- SET THE CONTROLLER -->
 <body ng-controller="mainController">
     <div class="container">
 
@@ -36,12 +40,18 @@
         <div id="todo-list" class="row">
             <div class="col-sm-4 col-sm-offset-4">
 
+                
+
                 <!-- LOOP OVER THE TODOS IN $scope.todos -->
                 <div class="checkbox" ng-repeat="todo in todos">
                     <label>
                         <input type="checkbox" ng-click="deleteTodo(todo._id)"> {{ todo.text }}
                     </label>
                 </div>
+
+                <p class="text-center" ng-show="loading">
+                    <span class="fa fa-spinner fa-spin fa-3x"></span>
+                </p>
 
             </div>
         </div>
@@ -60,6 +70,11 @@
                     <button type="submit" class="btn btn-primary btn-lg" ng-click="createTodo()">Add</button>
                 </form>
             </div>
+        </div>
+
+        <div class="text-center text-muted">
+            <p>A demo by <a href="http://scotch.io">Scotch</a>.</p>
+            <p>Read the <a href="http://scotch.io/tutorials/javascript/creating-a-single-page-todo-app-with-node-and-angular">tutorial</a>.</p>
         </div>
 
     </div>
